# INFT2503_ExamH24

./: CMakeLists.txt
Oblig2/: opp1.cpp  opp2_3.md  opp4.cpp  opp5.cpp  opp6.cpp
Oblig3/: OBL3.md  commodity.hpp  opp1.cpp  opp2.cpp  opp3.cpp  opp4.cpp
Oblig4/: OBL4.md  opp1.cpp  opp2.cpp
Oblig5/: OBL5.md  opp1.cpp  opp2.cpp
Oblig6/: OBL6.md  opp1.cpp  opp2.cpp
Oblig8/: OBL8.md  examh24.md  opp1.cpp  opp2.cpp  opp5.cpp  opp6.cpp  opp7.cpp  opp8.cpp  opp9.cpp  pair.hpp
